RESOLVED FIXED167316
Web Inspector: Asserts seen opening and closing Remote Web Inspector windows
https://bugs.webkit.org/show_bug.cgi?id=167316
Summary Web Inspector: Asserts seen opening and closing Remote Web Inspector windows
Joseph Pecoraro
Reported 2017-01-23 12:16:49 PST
Summary: Asserts seen opening and closing Remote Web Inspector windows Assert when opening: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x00000001113cde44 WTFCrash + 36 1 com.apple.JavaScriptCore 0x00000001113cde59 WTFCrashWithSecurityImplication + 9 2 com.apple.WebKit 0x0000000114abb354 WebKit::WebPageProxy::maybeInitializeSandboxExtensionHandle(WebCore::URL const&, WebKit::SandboxExtension::Handle&) + 164 3 com.apple.WebKit 0x0000000114abb5d0 WebKit::WebPageProxy::loadRequest(WebCore::ResourceRequest const&, WebCore::ShouldOpenExternalURLsPolicy, API::Object*) + 560 4 com.apple.WebKit 0x00000001147631ae WebKit::RemoteWebInspectorProxy::load(WTF::String const&, WTF::String const&) + 318 5 com.apple.WebKit 0x00000001142cfd5f -[_WKRemoteWebInspectorViewController loadForDebuggableType:backendCommandsURL:] + 127 ... Assert when closing: (newly added) Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x000000010a533894 WTFCrash + 36 (Assertions.cpp:323) 1 com.apple.WebCore 0x000000010dd17ff1 WebCore::InspectorController::disconnectAllFrontends() + 113 (InspectorController.cpp:305) 2 com.apple.WebKit 0x0000000102e1a12b WebKit::WebPage::close() + 395 (WebPage.cpp:1063) 3 com.apple.WebKit 0x000000010302e52a WebKit::WebProcess::didClose(IPC::Connection&) + 138 (WebProcess.cpp:648) 4 com.apple.WebKit 0x00000001027233d2 IPC::Connection::connectionDidClose()::$_13::operator()() + 242 (Connection.cpp:802) 5 com.apple.WebKit 0x0000000102723259 WTF::Function<void ()>::CallableWrapper<IPC::Connection::connectionDidClose()::$_13>::call() + 25 (Function.h:89) 6 com.apple.JavaScriptCore 0x000000010a5601ae WTF::Function<void ()>::operator()() const + 94 (Function.h:50) 7 com.apple.JavaScriptCore 0x000000010a57ba43 WTF::RunLoop::performWork() + 211 (RunLoop.cpp:106) 8 com.apple.JavaScriptCore 0x000000010a57d264 WTF::RunLoop::performWork(void*) + 36 (RunLoopCF.cpp:38) ... Both of these are due to patterns RemoteWebInspectorProxy/UI are not following from WebInspectorProxy/UI.
Attachments
[PATCH] Proposed Fix (2.29 KB, patch)
2017-01-23 12:18 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2017-01-23 12:17:05 PST
Joseph Pecoraro
Comment 2 2017-01-23 12:18:38 PST
Created attachment 299531 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2017-01-23 13:09:18 PST
Comment on attachment 299531 [details] [PATCH] Proposed Fix Clearing flags on attachment: 299531 Committed r211054: <http://trac.webkit.org/changeset/211054>
WebKit Commit Bot
Comment 4 2017-01-23 13:09:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.