Web Inspector: Asserts seen opening and closing Remote Web Inspector windows https://bugs.webkit.org/show_bug.cgi?id=167316 <rdar://problem/28891161>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-01-23
Reviewed by Alexey Proskuryakov.

* UIProcess/RemoteWebInspectorProxy.cpp:
(WebKit::RemoteWebInspectorProxy::createFrontendPageAndWindow):
Assume read access, like the local web inspector, to Web Inspector resources.

* WebProcess/WebPage/RemoteWebInspectorUI.cpp:
(WebKit::RemoteWebInspectorUI::closeWindow):
Clear ourselves as the inspector frontend client when closing.

Canonical link: https://commits.webkit.org/184366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211054 268f45cc-cd09-0410-ab3c-d52691b4dbfc